--- a/package.json
+++ b/package.json
@@ -85,9 +85,9 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
-    "react-redux": "7.0.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "5.0.0",
-    "redux": "4.0.1",
+    "redux": "^4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
@@ -148,6 +148,7 @@
     "react-app-polyfill": "0.2.2",
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
+    "redux-devtools": "^3.5.0",
     "rimraf": "2.6.3",
     "shelljs": "^0.8.3",
     "style-loader": "0.23.1",
